fix jboss-tools-docs/pom.xml to point to correct paths for new JBT Core and SOA projects in Github; remove Drools as I have no idea where it got moved